--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -11,6 +11,8 @@ spring:
 eureka:
   client:
     service-url:
+      register-with-eureka: true
+      fetch-registry: true
       defaultZone: http://localhost:8761/eureka/
   instance:
     hostname: localhost
