Сделана первая система регистрации на jwt-токенах. Треубет доработки

--- a/gateway-server/src/main/resources/application.yml
+++ b/gateway-server/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
         - id: user-service
           uri: lb://user-service
           predicates:
-            - Path=/api/auth/**
+            - Path=/api/user/**
           filters:
             - StripPrefix=2
 
