--- a/user-service/src/main/resources/application-docker.yml
+++ b/user-service/src/main/resources/application-docker.yml
@@ -27,3 +27,6 @@ eureka:
       register-with-eureka: true
       fetch-registry: true
       defaultZone: http://discovery-server:8761/eureka/
+  instance:
+    hostname: user-service
+    prefer-ip-address: true
